add paragraph in last

--- a/practice2.html
+++ b/practice2.html
@@ -25,6 +25,7 @@
     <input type="submit" value="submit" class="submit">
   </div>
 </div>
+<p>Lorem, ipsum.</p>
   <script>
     function myFunction() {
   var x = document.getElementById("password");
